--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,16 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <h1>Froms com validação</h1>
+    <form id="form">
+        <label for="name">Nome:</label>
+        <input type="text" id="name">
+
+        <label for="email">E-mail:</label>
+        <input type="text" id="email">
+
+        <label for="password">senha:</label>
+        <input type="password" id="password">
+    </form>
 </body>
 </html>
