--- a/web/index.html
+++ b/web/index.html
@@ -10,14 +10,30 @@
 <body>
     <h1>Froms com validação</h1>
     <form id="form">
-        <label for="name">Nome:</label>
-        <input type="text" id="name">
+        <label for="name1">Nome remetente:</label>
+        <input type="text" id="name1">
 
         <label for="email">E-mail:</label>
         <input type="text" id="email">
 
         <label for="password">senha:</label>
         <input type="password" id="password">
+
+        <label for="name2">Nome destinatario:</label>
+        <input type="text" id="name2">
+
+        <label for="location">Selecione o estado</label>
+        <select name="location" id="location">
+            <option value="teste">Teste 1</option>
+            <option value="bana">banana</option>
+            <option value="mac">maçã</option>
+            <option value="jorge">Jorge</option>
+        </select>
+
+        <label for="message">Descrição:</label>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        
+        <button type="submit">Enviar</button>
     </form>
 </body>
 </html>
