--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js"></script>
 </head>
 <body>
@@ -30,7 +30,7 @@
             <option value="jorge">Jorge</option>
         </select>
 
-        <label for="message">Descrição:</label>
+        <label for="message">Descrição do produto:</label>
         <textarea name="message" id="message" cols="30" rows="10"></textarea>
         
         <button type="submit">Enviar</button>
