--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    <h1>Froms com validação</h1>
+    <h1>Forms com validação</h1>
     <form id="form">
         <label for="name1">Nome remetente:</label>
         <input type="text" id="name1">
