--- a/web/index.html
+++ b/web/index.html
@@ -31,7 +31,7 @@
         </select>
 
         <label for="message">Descrição do produto:</label>
-        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <textarea name="message" id="message"></textarea>
         
         <button type="submit">Enviar</button>
     </form>
