--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Forms com validação</h1>
     <form id="form">
-        <label for="name1">Nome remetente:</label>
-        <input type="text" id="name1">
+        <label for="name">Nome remetente:</label>
+        <input type="text" id="name">
 
         <label for="email">E-mail:</label>
         <input type="text" id="email">
